# pico_ducky_c

./: .gitignore  CMakeLists.txt  README.md
config/: FreeRTOSConfig.h
include/: comm_external.h  runner.h  task_internal.h  tusb_config.h  usb_descriptors.h
scripts/: rick_roll.h
src/: comm_external.c  main.c  runner.c  usb_descriptors.c
